--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,33 @@ project(default_project VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-find_program(CCACHE_PROGRAM ccache)
-if(CCACHE_PROGRAM)
-    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
-endif()
-    
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 list(APPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}")
-    
-include(CommonCompileFlags)
-include(${CMAKE_CURRENT_LIST_DIR}/cmake/ConanInstall.cmake)
 
+option(ENABLE_CCACHE "Enable compiler cache" OFF)
+if (ENABLE_CCACHE)
+    include(Ccache)
+    enable_ccache()
+endif()
+
+option(ENABLE_IPO "Enable Interprocedural Optimization, aka Link Time Optimization (LTO)" OFF)
+option(ENABLE_BUILD_WITH_TIME_TRACE "Enable -ftime-trace to generate time tracing .json files on clang" OFF)
+include(CommonCompileFlags)
+
+#option(ENABLE_PCH "Enable Precompiled Headers" OFF)
+#if (ENABLE_PCH)
+#    target_precompile_headers(
+#    default_project INTERFACE_AUTOUIC_OPTIONS <vector> <string> <map> <set> <iterator> <utility> <algorithm> <iostream>)
+#endif()
+
+include(${CMAKE_CURRENT_LIST_DIR}/cmake/ConanInstall.cmake)
 prepare_conan()
+
+option(ENABLE_CLANG_TIDY "Enable static analysis with clang-tidy" OFF)
+if (ENABLE_CLANG_TIDY)
+    include(StaticAnalyser)
+    enable_clang_tidy()
+endif()
 
 add_subdirectory(src)
 add_subdirectory(doc)
